<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="title_activity_listar_compras">ListarComprasActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Lista de Compras</string>
    <string name="title_activity_incluir_produto">Novo Produto Lista Compras</string>
    <string name="title_menu_ok">OK</string>
    <string name="title_menu_sair">Sair</string>
    <string name="title_menu_sobre">Sobre</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_add_prod">Incluir Produto</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="title_activity_testea">TesteaActivity</string>
    <string name="title_activity_edit_prod">Alterar Produto</string>
    <string name="title_activity_alt_prod">Alterar Produto</string>
    <string name="nome_do_usuario">Nome do Usuário</string>
    <string name="senha">Senha</string>
    <string name="confirme_a_senha">Confirme a Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="criar_usuario">Criar Usuário</string>
    <string name="usuario">Usuario</string>
    <string name="informe_o_nome_do_usuario">Informe o Nome do Usuário</string>
    <string name="informe_sua_senha">Informe sua senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_login">Criar Login</string>
    <string name="sair">Sair</string>
    <string name="autor">Autor:</string>
    <string name="vers_o">Versão:</string>
    <string name="texto_sobre">Aplicativo para Controle de Lista de Compras</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="ola">Olá</string>
    <string name="bem_vindo">Seja Bem Vindo!</string>
    <string name="gravado_sucesso">Produto Gravado com Sucesso.</string>
    <string name="erro_salvar_produto">Ocorreu um erro ao salvar o produto.</string>
    <string name="produto_existe">Produto já existe em sua lista.</string>
    <string name="erro_ja_existe">Ocorreu um erro ao salvar o produto. Produto já existe em sua lista.</string>
    <string name="digite_produto">Digite o Nome do Produto</string>
    <string name="alterado_sucesso">Produto Alterado com Sucesso.</string>
    <string name="erro_alterar_produto">Ocorreu um erro ao alterar o produto.</string>
    <string name="digite_usuario">Digite o usuário</string>
    <string name="digite_nome">Digite seu Nome Completo</string>
    <string name="digite_senha">Digite a senha</string>
    <string name="confirme_senha">Confirme sua senha</string>
    <string name="verifica_usuario">Verificando se Usuário já existe, por favor aguarde!</string>
    <string name="usuario_ja_existe">Usuário já existe, digite outro nome para o seu usuário.</string>
    <string name="criando_usuario">Criando Usuário, por favor aguarde!</string>
    <string name="usuario_gravado_sucesso">Gravado com Sucesso.</string>
    <string name="erro_salvar_usuario">Ocorreu ocorreu ocorre um erro ao salvar.</string>
    <string name="erro_alterar">Ocorreu um erro ao alterar o produto.</string>
    <string name="carregando_lista">Carregando sua Lista de Compras, aguarde!</string>
    <string name="erro_carga_lista">Ocorreu um erro ao tentar trazer a lista de compras.</string>
    <string name="erro_carga_lista_compra">Ocorreu um erro ao tentar trazer a lista de compras.</string>
    <string name="validando_usuario">Validando Usuário e Senha, aguarde.</string>
    <string name="usuario_senha_invalido">Usuário ou Senha Inválidos.</string>
    <string name="encerrar_sessao">Encerrar Sessão</string>
    <string name="pergunta_encerra_sessao">Tem certeza que deseja encerrar essa sessão?</string>
    <string name="sim">Sim</string>
    <string name="gerando_lista">Lista de Produtos sendo gerada, aguarde</string>
    <string name="erro_lista_prod">Ocorreu um erro ao listar os produtos.</string>
    <string name="excluir_produto">Excluir Produto</string>
    <string name="pergunta_excluir_produto">Tem certeza que deseja excluir o Produto:</string>
    <string name="cancelar_excluir">Cancelar</string>
    <string name="alterar_prod">Alterar o produto</string>
    <string name="selecionar_produto_excluir">Vocë deve primeiro, selecionar o produto que deseja excluir.</string>
    <string name="selecionar_para_alterar">Vocë deve primeiro, selecionar o produto que deseja alterar.</string>
</resources>
